--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ deduce-release.zip
 # Generated content for site
 gh_pages/pages
 gh_pages/deduce-code
+
+# only keep main site version pushed to main
+gh_pages/versions/*
+!gh_pages/versions/main
