--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,50 +34,54 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Check out the repository
+      # Check out the repository
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python environment
+      # Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.13.1'
           
-      # Step 3: Install dependencies
+      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./gh_pages/requirements.txt
 
-      # Step 4: Run the Python convert script
+      # Run the Python convert script
       - name: Run convert script
         run: python ./gh_pages/doc/convert.py
       
-      # Step 5: Run the Python index generate script
+      # Run the Python index generate script
       - name: Run index generate script
         run: python ./gh_pages/doc/index_generate.py
 
-      # Step 6: Run the Python lib generate script
+      # Run the Python lib generate script
       - name: Run lib generate script
         run: python ./gh_pages/doc/lib_generate.py
 
-      # Step 7: Convert scss to css
+      # Convert scss to css
       - name: Convert scss to css
         run: pysassc ./gh_pages/css/style-dev.css ./gh_pages/css/style.css && pysassc ./gh_pages/css/stdlib-dev.css ./gh_pages/css/stdlib.css
 
-      # Step 8: Setup Pages
+      # Generate old versions
+      - name: Generate pages for old versions
+        run: python ./gh_pages/versions.py
+        
+      # Setup Pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      # Step 9: Upload artifact
+      # Upload artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: './gh_pages'
 
-      # Step 10: Deploy to gh pages
+      # Deploy to gh pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
